--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2022 FIFA World Cup</title>
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./assets/icons/football.jpeg" type="image/x-icon">
     <!--Style Sheet-->
     <link rel="stylesheet" href="./assets/style/style.css">
     <!--Font Awesome Icons-->
@@ -40,8 +42,8 @@
                 <nav class="nav">
                     <ul>
                         <li><button class="nav-btn"><a href="upcoming-match.html">Upcoming Match</a></button></li>
-                        <li><button class="nav-btn"><a href="">All Group</a></button></li>
-                        <li><button class="nav-btn"><a href="blogs.html">Blogs</a></li></button></li>
+                        <li><button class="nav-btn"><a href="index.html">All Group</a></button></li>
+                        <li><button class="nav-btn"><a href="index.html">Blogs</a></li></button></li>
                     </ul>
                 </nav>
             </div>
