view all & media query styled

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     The Greatest show on the Earth
                 </h1>
                 <p class="banner-para">
-                    Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
+                    FIFA world cup 2022 is knocking on the door and you can get all the live action from our site.After all, its the most prestigius show.
                 </p>
                 <br>
                 <button class="watch-live" type="submit">
@@ -52,7 +52,7 @@
                     <div>
                         <img src="assets/images/Blog Image.png" alt="Goal">
                         <button type="submit">Transfer</button>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, quasi!</p>
+                        <p>Christiano Ronaldo is going back in Real Madrid with record transfer fee</p>
                     </div>
                     <div class="match-details">
                         <div class="match-duration">
@@ -67,7 +67,7 @@
                     <div>
                         <img src="assets/images/Blog Image.png" alt="Goal">
                         <button type="submit">Transfer</button>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, quasi!</p>
+                        <p>Christiano Ronaldo is going back in Real Madrid with record transfer fee</p>
                     </div>
                     <div class="match-details">
                         <div class="match-duration">
@@ -82,7 +82,7 @@
                     <div>
                         <img src="assets/images/Blog Image.png" alt="Goal">
                         <button type="submit">Transfer</button>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, quasi!</p>
+                        <p>Christiano Ronaldo is going back in Real Madrid with record transfer fee</p>
                     </div>
                     <div class="match-details">
                         <div class="match-duration">
@@ -97,7 +97,7 @@
                     <div>
                         <img src="assets/images/Blog Image.png" alt="Goal">
                         <button type="submit">Transfer</button>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, quasi!</p>
+                        <p>Christiano Ronaldo is going back in Real Madrid with record transfer fee</p>
                     </div>
                     <div class="match-details">
                         <div class="match-duration">
@@ -112,7 +112,7 @@
                     <div>
                         <img src="assets/images/Blog Image.png" alt="Goal">
                         <button type="submit">Transfer</button>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, quasi!</p>
+                        <p>Christiano Ronaldo is going back in Real Madrid with record transfer fee</p>
                     </div>
                     <div class="match-details">
                         <div class="match-duration">
@@ -127,7 +127,7 @@
                     <div>
                         <img src="assets/images/Blog Image.png" alt="Goal">
                         <button type="submit">Transfer</button>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, quasi!</p>
+                        <p>Christiano Ronaldo is going back in Real Madrid with record transfer fee</p>
                     </div>
                     <div class="match-details">
                         <div class="match-duration">
@@ -136,6 +136,10 @@
                         <div class="comments">
                             <i class="fa-regular fa-clock"></i> 20
                         </div>
+                    </div>
+                    <br>
+                    <div class="btn-tablet">
+                        <a href="">View All</a>
                     </div>
                 </div>
             </article>
