--- a/index.html
+++ b/index.html
@@ -15,26 +15,34 @@
 </head>
 
 <body>
+    <!-- header start -->
     <header>
-        <section class="header">
+        <section>
             <div class="banner-container">
+               <div class="header">
                 <h1 class="banner-heading">
-                    The Greatest show on the Earth
+                    The Greatest show<br>
+                    on the Earth
                 </h1>
                 <p class="banner-para">
-                    FIFA world cup 2022 is knocking on the door and you can get all the live action from our site.After all, its the most prestigius show.
+                    FIFA world cup 2022 is knocking on the door and you can get all the live action from our site.<br>
+                    After all, its the most prestigius show.
                 </p>
                 <br>
                 <button class="watch-live" type="submit">
-                    <a href="">Watch Live </a><span class="watch-live-icon"><em
-                            class="fa-solid fa-angle-right"></em></span>
+                    <a href="">Watch Live </a>
+                    <span class="watch-live-icon">
+                        <em class="fa-solid fa-angle-right"></em>
+                    </span>
                 </button>
-            </div>
-            <div class="banner-img">
-                <img src="assets/images/Banner.png" alt="">
+               </div>
+               <div class="banner-img">
+                  <img src="assets/images/Banner.png" alt="">
+               </div>
             </div>
         </section>
     </header>
+    <!-- header end -->
 
     <main>
         <section class="content">
