various final update

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
     <main>
         <section class="content">
+            <!-- navigation start -->
             <div class="navigation">
                 <nav class="nav">
                     <ul>
@@ -55,6 +56,7 @@
                     </ul>
                 </nav>
             </div>
+            <!-- content start -->
             <article class="match-info">
                 <div class="match">
                     <div>
@@ -151,7 +153,9 @@
                     </div>
                 </div>
             </article>
+            <!-- content end -->
         </section>
+        <!-- footer start -->
         <footer>
             <div class="footer-main">
                 <div class="footer-banner">
@@ -178,6 +182,7 @@
                 </div>
             </div>
         </footer>
+        <!-- footer end -->
     </main>
 
 </body>
