--- a/upcoming-match.html
+++ b/upcoming-match.html
@@ -15,14 +15,18 @@
 </head>
 
 <body>
+    <!-- header start -->
     <header>
-        <section class="header">
+        <section>
             <div class="banner-container">
+               <div class="header">
                 <h1 class="banner-heading">
-                    The Greatest show on the Earth
+                    The Greatest show<br>
+                    on the Earth
                 </h1>
                 <p class="banner-para">
-                    FIFA world cup 2022 is knocking on the door and you can get all the live action from our site.After all, its the most prestigius show.
+                    FIFA world cup 2022 is knocking on the door and you can get all the live action from our site.<br>
+                    After all, its the most prestigius show.
                 </p>
                 <br>
                 <button class="watch-live" type="submit">
@@ -31,15 +35,18 @@
                         <em class="fa-solid fa-angle-right"></em>
                     </span>
                 </button>
-            </div>
-            <div class="banner-img">
-                <img src="assets/images/Banner.png" alt="">
+               </div>
+               <div class="banner-img">
+                  <img src="assets/images/Banner.png" alt="">
+               </div>
             </div>
         </section>
     </header>
+    <!-- header end -->
 
     <main>
         <section class="content">
+            <!-- navigation start -->
             <div class="navigation">
                 <nav class="nav">
                     <ul>
@@ -49,6 +56,7 @@
                     </ul>
                 </nav>
             </div>
+            <!-- content start -->
             <article>
                 <div class="fixture-container">
                     <div class="match-fixture">
@@ -107,7 +115,9 @@
                     </div>
                 </div>
             </article>
+            <!-- content end -->
         </section>
+        <!-- footer start -->
         <footer>
             <div class="footer-main">
                 <div class="footer-banner">
@@ -134,6 +144,7 @@
                 </div>
             </div>
         </footer>
+        <!-- footer end -->
     </main>
 
 </body>
