footer link & style update

--- a/index.html
+++ b/index.html
@@ -174,10 +174,18 @@
                 </div>
                 <div class="footer-social">
                     <ul>
-                        <li><span><em class="fa-brands fa-facebook-square"></em> Facebook</span></li>
-                        <li><span><em class="fa-brands fa-twitter-square"></em> Twitter</span></li>
-                        <li><span><em class="fa-brands fa-linkedin"></em> Linkedin</span></li>
-                        <li><span><em class="fa-brands fa-youtube-square"></em> YouTube</span></li>
+                        <li><span><a href="http://www.facebook.com" target="_blank">
+                            <em class="fa-brands fa-facebook-square"></em>
+                        </a> Facebook</span></li>
+                        <li><span><a href="http://www.twitter.com" target="_blank">
+                            <em class="fa-brands fa-twitter-square"></em>
+                        </a> Twitter</span></li>
+                        <li><span><a href="http://www.linkedin.com" target="_blank">
+                            <em class="fa-brands fa-linkedin"></em>
+                        </a> Linkedin</span></li>
+                        <li><span><a href="http://www.youtube.com">
+                            <em class="fa-brands fa-youtube-square"></em>
+                        </a> YouTube</span></li>
                     </ul>
                 </div>
             </div>
